# fuxi

./: .gitignore  AGENTS.md  Dockerfile  README.md  SKILL.md  docker-compose.yml  env.example  fuxi_client.py  fuxi_core.py  fuxi_search.py  fuxi_server.py  install.sh  pyproject.toml  start_fuxi.sh
docs/: FX-BUG-002-BUG清单与修复方案.md  FX-EVAL-001-全面系统评估报告.md  FX-PROPOSAL-008-v2.0核心功能升级建议书.md  FX-PROPOSAL-V2-009-v2.0核心功能升级建议书.md  FX-RESIDUAL-FIX-007-残留问题修复验证报告.md  FX-RETEST-004-全面复测报告.md  FX-RETEST2-006-修复验证+回归测试综合报告.md  FX-ROADMAP-003-迭代升级路线图.md  FX-V3VERIFY-005-v3.0发布验证报告.md  fuxi_comprehensive_audit_report.md  promotion_standards.md
fuxi/: __init__.py  config.py  models.py
fuxi_personas/: eval_report.md  岳星悟_IDENTITY.md  岳星悟_SOUL.md  柔月使_IDENTITY.md  柔月使_SOUL.md  柔虎命_IDENTITY.md  柔虎命_SOUL.md  柔龙帝_IDENTITY.md  柔龙帝_SOUL.md  渊虎神_IDENTITY.md  渊虎神_SOUL.md  紫鹰识_IDENTITY.md  紫鹰识_SOUL.md  苍水令_IDENTITY.md  苍水令_SOUL.md  金龟识_IDENTITY.md  金龟识_SOUL.md  静山命_IDENTITY.md  静山命_SOUL.md
fuxi_scripts/: acp_link_wrapper.sh  auto_upload.py  bbon_trigger.py  claude_bridge.py  claude_relay.py  eval_harness.py  feishu_cc_wrapper.sh  fuxi_autonomous.py  fuxi_cli.py  fuxi_tool.py  gh-proxy-worker.js  gh_tunnel_proxy.py  github_proxy_addon.py  health_scan.py  instinct_cli.py  jinlange_bridge.py  model_proxy.py  monitor_fuxi.py  openclaw_lb.py  persona_forge.py  run_engines.py  send_qq.py  sync_terminal_history.py  upload_context.py
scripts/: backup.sh  benchmark.py  migrate_legacy_files.py
tests/: conftest.py  test_acp.py  test_adaptive.py  test_api_integration.py  test_api_integration_v2.py  test_auth.py  test_cognitive_loop_e2e.py  test_config.py  test_cron.py  test_decision.py  test_desktop_life.py  test_edge_cases.py  test_embed_full.py  test_emotion_orchestrator.py  test_engines.py  test_final_edge.py  test_final_push.py  test_graph_final.py  test_hologram.py  test_kernel.py  test_memory.py  test_repo.py  (+10 more)
(+166 files in other folders)
