[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fuxi*"]

[project]
name = "fuxi"
version = "1.0.0"
description = "FuXi Memory & Cognitive Engine System"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26.0",
    "structlog>=24.0",
    "httpx>=0.27.0",
    "slowapi>=0.1.9",
    "python-multipart>=0.0.9",
    "croniter>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "vulture>=2.3",
    "ruff>=0.3.0",
    "mypy>=1.8",
]
metrics = [
    "prometheus_client>=0.16",
]
vector = [
    "faiss-cpu>=1.7",
    "hnswlib>=0.7",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "B",
    "C4",
    "SIM",
    "I",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.isort]
known-first-party = ["fuxi"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"fuxi/agent/*.py" = ["F841"]
"fuxi/engines/*.py" = ["F841"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["tests/", "venv/", ".venv/"]
strict = false
warn_return_any = false
warn_unused_configs = true
warn_redundant_casts = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["fuxi"]
omit = [
    "tests/*",
    "venv/*",
    "fuxi/agent/*",
    "fuxi/observability/metrics.py",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]